--- a/src/home/index.html
+++ b/src/home/index.html
@@ -11,7 +11,7 @@
     <h2>File Upload Service</h2>
     <input type="file" id="file">
     <button id="upload">Upload</button>
-        <small id="status"></small>
-
+    <small id="status"></small>
+    <div id="file-container"></div>
 </body>
 </html>
