--- a/src/home/index.html
+++ b/src/home/index.html
@@ -13,5 +13,9 @@
     <button id="upload">Upload</button>
     <small id="status"></small>
     <div id="file-container"></div>
+
+    <video controls>
+        <source src="http://localhost:5005/v1/cdn/video/8f958fe2-0e8a-42f6-a9e9-abab8d54aac2.mov" type="video/quicktime">
+      </video>
 </body>
 </html>
