removed async functions for upload and get images/videos

--- a/src/home/index.html
+++ b/src/home/index.html
@@ -6,16 +6,14 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <h1>screw coding</h1>
-
     <h2>File Upload Service</h2>
     <input type="file" id="file">
     <button id="upload">Upload</button>
     <small id="status"></small>
     <div id="file-container"></div>
 
-    <video controls>
-        <source src="http://localhost:5005/v1/cdn/video/8f958fe2-0e8a-42f6-a9e9-abab8d54aac2.mov" type="video/quicktime">
+    <video controls  width="320" height="240" preload="metadata">
+        <source src="http://localhost:5005/v1/video/8f958fe2-0e8a-42f6-a9e9-abab8d54aac2.mov" type="video/quicktime">
       </video>
 </body>
 </html>
