--- a/src/home/index.html
+++ b/src/home/index.html
@@ -12,8 +12,10 @@
     <small id="status"></small>
     <div id="file-container"></div>
 
-    <video controls  width="320" height="240" preload="metadata">
-        <source src="http://localhost:5005/v1/video/8f958fe2-0e8a-42f6-a9e9-abab8d54aac2.mov" type="video/quicktime">
-      </video>
+    <video controls preload="metadata">
+        <source src="/v1/video/8f958fe2-0e8a-42f6-a9e9-abab8d54aac2.mov" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    
 </body>
 </html>
